--- a/practicas/Conecta4/app/src/main/res/values/strings.xml
+++ b/practicas/Conecta4/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Conecta4</string>
+    <string name="aceptar">Nueva Partida</string>
+    <string name="salir">Salir</string>
+    <string name="mensajeTitulo">Partida Finalizada</string>
+    <string name="mensajeGanadorJugador">¡¡Has ganado!!</string>
+    <string name="mensajeGanadorMaquina">Has perdido</string>
 </resources>
