--- a/practicas/Suma2Numeros/app/src/main/res/values/strings.xml
+++ b/practicas/Suma2Numeros/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Suma2Numeros_v0</string>
+    <string name="app_name">Sumar 2 Números</string>
 </resources>
