--- a/practicas/pr2_eventos/app/src/main/res/values/strings.xml
+++ b/practicas/pr2_eventos/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">PracticaEventos2</string>
+    <string name="app_name">Practicando Eventos 2</string>
 </resources>
